# swimlane-activity-diagram

./: .dockerignore  .gitignore  AGENTS.md  README.md  diagram-brd-draft.md  index.html  package-lock.json  package.json  playwright.config.ts  railway.toml  skills-lock.json  tsconfig.json  vite  vite.config.ts
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260607_01_latest_state.py  20260608_01_feature_usecase_generation_metadata.py
apps/api/app/: __init__.py  auth.py  config.py  db.py  idempotency.py  main.py  models.py  persistence.py  rate_limit.py  runtime_contract.py
apps/api/app/ai/: __init__.py  telemetry.py
apps/api/app/providers/: base.py  mock_provider.py  openrouter_provider.py
apps/api/app/routes/: brd_generate.py  brd_validate.py  diagram_generate.py  persistence.py  usecase_generate.py
apps/api/app/schemas/: common.py  persistence.py  request.py  spec.py  usecase.py
apps/api/app/services/: brd_docx.py  diagram_builder.py  extract.py  interpret.py  normalize.py  persistence_generation.py  persistence_serializers.py  persistence_service.py  (+7 more)
apps/api/tests/: conftest.py  test_ai_telemetry.py  test_diagram_builder.py  test_live_smoke.py  test_openrouter_provider.py  test_persistence_auth_matrix.py  test_persistence_chain.py  test_pipeline.py  test_prompt_registry.py  test_routes.py  test_schema_contract.py  test_usecase_architecture.py  test_usecase_builder.py  test_usecase_generation_service.py  test_usecase_policy_artifacts.py  test_usecase_routes.py  test_usecase_synthesis.py
(+190 files in other folders)
