[project]
name = "swimlane-brd-api"
version = "0.1.0"
description = "FastAPI backend for Swimlane Activity Diagram BRD generation"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "clerk-backend-api>=5.0.6,<6.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
